fixed evolution images and arrow styling to prevent spillover, bump to 1.0.8

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -176,7 +176,7 @@ ul {
 .arrow {
     font-size: 2em;
     font-weight: bold;
-    margin: auto;
+    margin: auto 1em;
     white-space: nowrap;
 }
 
